package interfaceadapter.save_progress;

import use_case.save_progress.SaveProgressInputBoundary;
import use_case.save_progress.SaveProgressInputData;

import java.util.Set;

/**
 * Controller for the Save Progress use case.
 * Called from the Save button in the GUI.
 */
public class SaveProgressController {

    private final SaveProgressInputBoundary interactor;

    public SaveProgressController(SaveProgressInputBoundary interactor) {
        this.interactor = interactor;
    }

    /**
     * No parameters for now since saving just uses current game state.
     * The view can simply call controller.execute() when the button is clicked.
     */
    public void execute(String location, int numberOfKeys, Set<String> puzzlesSolved) {
        SaveProgressInputData inputData = new SaveProgressInputData(location, numberOfKeys, puzzlesSolved);
        interactor.execute(inputData);
    }
}
