package main.java.use_case.quit_game;

/**
 * Input Boundary for actions which are related to logging in.
 */
public interface QuitGameInputBoundary {

    /**
     * Executes the quit game use case.
     */
    void execute();
}